@@ -14,6 +14,10 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+CRE: redesign the quest steps panel, to have inplace edition.
+This gives a better overview of the steps.
+Nicolas Weeger 2010-06-13
+
 Make the plugin calls to player titles respect the custom titles the player
 has set.
 server/plugins.c, plugins/common, plugins/cfpython
